Updated Lab 1 (not completed)

--- a/New_Labs/Lab1.html
+++ b/New_Labs/Lab1.html
@@ -416,8 +416,220 @@ analysis!</li>
 <div class="figcaption">Figure 1.3: Recording a mono sound</div>
 </div>
 <ol start="4" style="list-style-type: decimal">
-<li><br></li>
+<li>Open the sound file in the Edit window:</li>
 </ol>
+<ul>
+<li>In the Objects window (see Figure 1.2), highlight the sound file
+you’ve just recorded.</li>
+<li>Click <strong>View &amp; Edit</strong> on the “Analysis and
+synthesis tools” panel (see Figure 1.2).</li>
+</ul>
+<p><br></p>
+<p>When you first open a sound file in the View &amp; Edit window, it
+may seem a bit of a mess. Depending on the default settings in the
+version of Praat you are using, you may see blue vertical lines in the
+waveform, and lines of red dots and a blue line in the spectrogram (see
+Figure 1.5). If you don’t need these displays for your current purposes
+(you don’t for this lab!), you can tidy up the visual display by doing
+the following:</p>
+<ul>
+<li>In the menu of the View &amp; Edit window:
+<ul>
+<li><strong>Pulses &gt; Show pulses</strong> (click on this to unselect
+it)</li>
+<li><strong>Formant &gt; Show formants</strong> (click on this to
+unselect it)</li>
+<li><strong>Pitch &gt; Show pitch</strong> (click on this to unselect
+it)</li>
+</ul></li>
+</ul>
+<p><br></p>
+<p>Two things are being displayed now in the Edit window: <strong>the
+waveform</strong> on the upper level and <strong>the
+spectrogram</strong> on the lower level.</p>
+<blockquote>
+<p>TIP: Here are some common manipulations you will find useful: <br>
+<em>Selecting a portion of the sound file and measure the duration of
+the portion</em> <br> * To select a portion of the sound file, place the
+cursor on the starting point on the waveform or spectrogram and drag the
+mouse over the portion you are interested in. <br> * The number in black
+at the top and bottom of the display indicates the duration of the
+selection. The two red numbers on each side of the selection (on the top
+only) indicate the starting and ending time of the selection (see Figure
+1.6). <br> <em>Zooming into a portion of the sound file</em> <br> * To
+zoom into a specific portion of the sound file, select it first and
+click “sel” in the zoom options panel (see Figure 1.6). <br> * You can
+also use the “in” and “out” buttons in the zoom options panel to zoom in
+or zoom out within the sound file. This will zoom the file around the
+center point of the window display, regardless of where your cursor is.
+<br> <em>Listening to a sound file</em> <br> * In the View &amp; Edit
+Window, you can listen to the sound file or a portion thereof by
+clicking on one of the panels at the bottom of the display (Figure
+1.6).</p>
+</blockquote>
+<p><br></p>
+<ol start="5" style="list-style-type: decimal">
+<li>Extract [first-name] [last-name]; #I made some changes to fit the
+new Praat version here - Taylor</li>
+</ol>
+<ul>
+<li>Select the portion that corresponds only to your first and last name
+(see Figure 1.6)</li>
+<li><strong>Sound &gt; “Extract sounds to object window” &gt; Extract
+selected sound (time from zero)</strong> (The extracted selection will
+show up as an entry (‘sound untitled’) in the Praat objects window)</li>
+<li>Close View &amp; Edit window</li>
+</ul>
+<p><br></p>
+<ol start="6" style="list-style-type: decimal">
+<li>Rename the extracted file (‘sound untitled’ in the Praat objects
+window)</li>
+</ol>
+<ul>
+<li>In the Objects window, highlight ‘sound untitled’</li>
+<li>Click <strong>Rename</strong> below the object list</li>
+</ul>
+<p><br></p>
+<ol start="7" style="list-style-type: decimal">
+<li>Save the new sound file on the desktop:</li>
+</ol>
+<ul>
+<li>Highlight the file in the object list</li>
+<li><strong>Save &gt; Save as WAV file…</strong> (this is the most
+widely acceptable extension)</li>
+<li>Select the desktop as the save-to location</li>
+</ul>
+<p><br></p>
+<ol start="8" style="list-style-type: decimal">
+<li>Create a <strong>textgrid</strong>: textgrids let you label or
+annotate the spectrogram (and sound file) – they are particularly
+helpful for acoustic analysis, to keep track of where you’ve taken
+measurements, etc.</li>
+</ol>
+<ul>
+<li>In the Praat Objects window, highlight the newly renamed file (see
+step 6)</li>
+<li><strong>Annotate &gt; To TextGrid…</strong> (see Figure 1.7)</li>
+<li>Create two tiers (this will be enough for our purposes): All Tier
+names: <strong>word segment</strong>
+<ul>
+<li>This creates 2 tiers, one with the name of ‘word’ and the other with
+the name of ‘segment’. Ignore the second line in the TextGrid naming
+window, “Which of these are point tiers”. This is irrelevant at the
+present stage.</li>
+</ul></li>
+</ul>
+<p><br></p>
+<ol start="9" style="list-style-type: decimal">
+<li>Open the sound file and textgrid together (see Figure 1.8): In order
+to segment and/or label a sound file, you have to open the sound file
+TOGETHER with its textgrid file.</li>
+</ol>
+<ul>
+<li>Hold down Ctrl (or Command on a Mac) and click on each file to
+highlight them both</li>
+<li><strong>View &amp; Edit</strong></li>
+</ul>
+<p>![Figure 1.8 Opening a textgrid file with its corresponding sound
+file] (._8.png)</p>
+<p><br></p>
+<p>In your display you should now see the waveform (top), the
+spectrogram (middle) and the textgrid (bottom) corresponding to your
+sound file (see Figure 1.9). We will talk about waveforms and
+spectrograms in detail later on.</p>
+<p><br></p>
+<ol start="10" style="list-style-type: decimal">
+<li>Segment the file (see Figure 1.9): In the sound file, identify your
+first name and last name. Use the following steps to segment each:</li>
+</ol>
+<ul>
+<li>To find your first and last name on the spectrogram, listen to the
+sound file and look at the spectrogram – these should give you hints as
+to where your first name ends and your second name and starts. It may
+help to zoom into small chunks of the sound file and listen to
+those.</li>
+<li>Place the cursor at the beginning of the name on the
+spectrogram/waveform (not on the Textgrid tier). A boundary line will
+show up.</li>
+<li>Click in the little circle at the top of the word tier in the
+Textgrid to create a boundary (Figure 1.9).</li>
+</ul>
+<blockquote>
+<p>TIP: To remove a boundary you have made, do the following: *
+Highlight the boundary by going to <strong>Boundary &gt; Remove</strong>
+or click <strong>Alt + Backspace</strong> * Move a boundary by clicking
+on the boundary to highlight it (should go red as a result) and drag it
+to the desired location # Changed the wording here to make it look and
+sound better. Also thought it would be better as a tip! - Taylor</p>
+</blockquote>
+<p><br></p>
+<ol start="11" style="list-style-type: decimal">
+<li>Label the intervals (see FIgure 1.9)</li>
+</ol>
+<ul>
+<li>Select/highlight the target interval by clicking between two
+boundaries, the selected interval should go yellow</li>
+<li>To input or change the text in an interval, edit in the Textbox
+above the spectrogram (See Figure 1.9).</li>
+<li>Give each interval you create a name ([first name] or [last
+name])</li>
+</ul>
+<p><br></p>
+<ol start="12" style="list-style-type: decimal">
+<li>Follow steps (10) and (11) to segment your [first name + last name]
+into segments.</li>
+</ol>
+<p><br></p>
+<blockquote>
+<p>TIP: To use phonetic symbols in your segment tiers: * In the TextGrid
+editing window, go to <strong>Help &gt; Phonetic symbols</strong> * From
+here, you can see what keystrokes you need to create special fonts
+(using them is not recommended as they end up looking a bit wonky…)</p>
+</blockquote>
+<p><br></p>
+<ol start="13" style="list-style-type: decimal">
+<li>Save your textgrid onto the desktop:</li>
+</ol>
+<ul>
+<li><strong>File &gt; Save TextGrid as textfile…</strong></li>
+</ul>
+<p><br></p>
+<ol start="14" style="list-style-type: decimal">
+<li>Export your labeled waveform and spectrogram to Word (see Figure
+1.10):</li>
+</ol>
+<ul>
+<li>Maximize the Edit window: click on the little square at the top
+right of your Edit window</li>
+<li>Hit <strong>PrtSc</strong> (“Print Screen”) or
+<strong>Command-shift-3</strong> on your Windows or Mac keyboard
+respectively. Nothing will happen on your screen at this point</li>
+<li>Open Word, and provide a prose introduction to the image you are
+about to paste in: e.g. “Figure 1 is a waveform and spectrogram of my
+name”</li>
+<li>Hit <strong>Ctrl + V</strong> to paste the Praat image into your
+word document</li>
+</ul>
+<p><br></p>
+<ol start="15" style="list-style-type: decimal">
+<li>Save the file: you must upload this to eClass.</li>
+</ol>
+<p><br></p>
+<p>If you complete all of these steps, you should end up with a word
+file with an image of the labeled waveform/spectrogram corresponding to
+your name, as in Fig. 1.10. You can save this file, and your Praat files
+(sound and textgrid) by e-mailing them to yourself or copying them onto
+a flash drive (memory stick).</p>
+<p><br> Your lab report should include one Figure, corresponding to the
+segmented and labeled spectrogram/waveform of your name. In addition,
+please answer the following questions: <br> <strong>Q1:</strong> How can
+you tell where one word ends and another word begins? <br>
+<strong>Q2:</strong> Do you notice any patterns in terms of how
+different sounds look visually, on either the waveform or the
+spectrogram? <br> a. Which sounds have the highest amplitude and how can
+you tell? <br> b. How do sounds of different sonority (e.g. stop
+vs. fricative) look on the spectrogram?</p>
+<p><br><br><br><br><br></p>
 <p><font size="1.5"> Disclaimer: The original lab materials on which
 this lab is based was put together in 2015 (updated 2019) by Sonya Bird,
 Qian Wang, Sky Onosson, and Allison Benner for the LING 380 Acoustic
