--- a/New_Labs/Lab1.html
+++ b/New_Labs/Lab1.html
@@ -358,17 +358,30 @@ al.</h4>
 </div>
 
 
-<div id="goal-of-lab-1" class="section level3">
-<h3>Goal of Lab 1:</h3>
-<div id="the-goal-of-this-first-lab-is-to-explore-some-of-the-basic-features-of-praat-www.praat.org-which-we-will-be-using-for-speech-analysis-throughout-the-term.-you-will-learn-to-make-recordings-bring-up-visual-displays-of-these-recordings-waveforms-and-spectrograms-segment-and-label-various-components-of-these-recordings-and-export-the-visual-displays-into-a-word-document.-the-skills-you-learn-today-will-be-useful-for-your-lab-work-throughout-the-remainder-of-this-course-and-beyond" class="section level5">
+<hr />
+<div id="goal-of-lab-1" class="section level4">
+<h4><strong>Goal of Lab 1:</strong></h4>
+<div id="the-goal-of-this-first-lab-is-to-explore-some-of-the-basic-features-of-praat-which-we-will-be-using-for-speech-analysis-throughout-the-term.-you-will" class="section level5">
 <h5>The goal of this first lab is to explore some of the basic features
-of PRAAT (www.praat.org), which we will be using for speech analysis
-throughout the term. You will learn to make recordings, bring up visual
-displays of these recordings (waveforms and spectrograms), segment and
-label various components of these recordings, and export the visual
-displays into a word document. The skills you learn today will be useful
-for your lab work throughout the remainder of this course and
-beyond…</h5>
+of <a href="www.praat.org">PRAAT</a>, which we will be using for speech
+analysis throughout the term. You will:</h5>
+</div>
+<div id="learn-to-make-recordings" class="section level5">
+<h5>1. Learn to make recordings</h5>
+</div>
+<div id="bring-up-visual-displays-of-these-recordings-waveforms-and-spectrograms" class="section level5">
+<h5>2. Bring up visual displays of these recordings (waveforms and
+spectrograms)</h5>
+</div>
+<div id="segment-and-label-various-components-of-these-recordings" class="section level5">
+<h5>3. Segment and label various components of these recordings</h5>
+</div>
+<div id="export-the-visual-displays-into-a-word-document." class="section level5">
+<h5>4. Export the visual displays into a word document.</h5>
+</div>
+<div id="the-skills-you-learn-today-will-be-useful-for-your-lab-work-throughout-the-remainder-of-this-course-and-beyond" class="section level5">
+<h5>The skills you learn today will be useful for your lab work
+throughout the remainder of this course and beyond…</h5>
 <hr />
 <br> 1. Open Praat: double click on the following icon:
 <center>
