--- a/New_Labs/Lab1.html
+++ b/New_Labs/Lab1.html
@@ -398,16 +398,16 @@ throughout the remainder of this course and beyond…</h5>
 </div>
 </center>
 <blockquote>
-<h5 id="tip-the-tools-you-see-in-the-analysis-and-synthesis-tool-panel-see-figure-1.2-above-are-specific-to-the-highlighted-objects-in-the-list.-for-example-the-tools-that-are-listed-for-a-sound-object-such-as-sound-lab8_canadianbc-are-different-from-that-for-a-textgrid-object.-when-you-first-open-praat-there-will-be-nothing-in-your-object-list.-therefore-nothing-will-show-up-in-your-analysis-and-synthesis-tool-panel.">TIP:
+<h5 id="tip-the-tools-you-see-in-the-analysis-and-synthesis-tool-panel-see-figure-1.2-above-are-specific-to-the-highlighted-objects-in-the-list.-for-example-the-tools-that-are-listed-for-a-sound-object-such-as-name-or-fargo_vowels-are-different-from-that-for-a-textgrid-object.-when-you-first-open-praat-there-will-be-nothing-in-your-object-list.-therefore-nothing-will-show-up-in-your-analysis-and-synthesis-tool-panel.">TIP:
 The tools you see in the Analysis and Synthesis Tool Panel (see Figure
 1.2 above) are specific to the highlighted object(s) in the list. For
-example, the tools that are listed for a sound object such as “Sound
-Lab8_CanadianBC” are different from that for a Textgrid object. When you
+example, the tools that are listed for a sound object such as “name” or
+“Fargo_vowels” are different from that for a Textgrid object. When you
 first open Praat, there will be nothing in your object list. Therefore,
 nothing will show up in your Analysis and Synthesis Tool Panel.</h5>
 </blockquote>
-<p><br> 3. Record the sentence: <strong>“My name is [first-name]
-[last-name]”</strong></p>
+<p><br> 3. Record the sentence: “My name is [first-name]
+[last-name]”</p>
 <p>In the main menu of the Objects window (see Figure 1.2):</p>
 <ul>
 <li>Click <strong>New &gt; Record mono Sound (sampling rate: 44 100
