--- a/New_Labs/Lab1.html
+++ b/New_Labs/Lab1.html
@@ -436,6 +436,12 @@ analysis!</li>
 signal</div>
 </div>
 </center>
+<p><br> Compare the waveform in these two cases. The one in the clipped
+recording has a square-like form, because the sound is “bursting out” of
+the maximum and minimum levels that can be plotted. In a good recording,
+the waveform will be touching the top and bottom of the plot only once
+or twice. The scale/zoom of the waveform will adjust such that it’s
+always showing exactly the</p>
 <p><br> 4. Open the sound file in the Edit window:</p>
 <ul>
 <li>In the Objects window (see Figure 1.2), highlight the sound file
