--- a/New_Labs/Lab2.html
+++ b/New_Labs/Lab2.html
@@ -360,7 +360,7 @@ al.</h4>
 
 <hr />
 <div id="goal-of-lab-2" class="section level3">
-<h3>Goal of Lab 2:</h3>
+<h3><strong>Goal of Lab 2:</strong></h3>
 <p>One of the most common acoustic features that is measured and
 manipulated in speech research is voicing in stop consonants (in
 particular voice onset time), so this is a good place to start. In this
@@ -504,6 +504,7 @@ important thing is to be consistent and use the same method for
 <strong>LAB 2 REPORT</strong>
 </h4>
 </center>
+<p><font size="4.0"></p>
 <p><font size="3.5"> <em>Table 2.1 VOT</em> </font></p>
 <table>
 <colgroup>
