--- a/New_Labs/Lab2.html
+++ b/New_Labs/Lab2.html
@@ -361,12 +361,14 @@ al.</h4>
 <hr />
 <div id="goal-of-lab-2" class="section level3">
 <h3><strong>Goal of Lab 2:</strong></h3>
-<p>One of the most common acoustic features that is measured and
+<h4>
+One of the most common acoustic features that is measured and
 manipulated in speech research is voicing in stop consonants (in
 particular voice onset time), so this is a good place to start. In this
 lab, we are going to explore the acoustic correlates of different stop
-consonants in terms of two parameters: VOICING and PLACE OF
-ARTICULATION.</p>
+consonants in terms of two parameters: <em>voicing</em> and <em>place of
+articulation</em>.
+</h4>
 <hr />
 <p><font size="3.5"></p>
 <div id="recording" class="section level5">
@@ -680,6 +682,17 @@ are the possible acoustic correlates of the phonemic voicing (voiced
 vs. voiceless) contrast across languages?</p>
 <p><strong>Q7:</strong> Provide a reference and very brief summary of
 one academic paper that uses the methods covered in this lab.</p>
+<hr />
+<p><font size="1.5"> Disclaimer: The original lab materials on which
+this lab is based was put together in 2015 (updated 2019) by Sonya Bird,
+Qian Wang, Sky Onosson, and Allison Benner for the LING 380 Acoustic
+Phonetics course at the University of Victoria. Their materials are
+released under a Creative Commons license (CC BY-NC-SA 4.0) which allows
+for non-commercial use as well as copying and distribution and the
+creation of derivative works for non-commercial purposes. Thomas Kettig
+has modified these materials as needed for the York University LING 4220
+Acoustic Phonetics course.</font></p>
+<p><br></p>
 </div>
 </div>
 
