changes to Lab 2

--- a/New_Labs/Lab2.html
+++ b/New_Labs/Lab2.html
@@ -385,11 +385,11 @@ listed.</p>
 <tbody>
 <tr class="odd">
 <td align="center">Lab2_Eng_stop_a.wav</td>
-<td align="center">pʰa, ba, tʰa, da, kʰa, ga</td>
+<td align="center">pa, ba, ta, da, ka, ga</td>
 </tr>
 <tr class="even">
 <td align="center">Lab2_Eng_a_stop_a.wav</td>
-<td align="center">apʰa, aba, atʰa, ada, akʰa, aga</td>
+<td align="center">apa, aba, ata, ada, aka, aga</td>
 </tr>
 <tr class="odd">
 <td align="center">Lab2_Eng_a_stop.wave</td>
@@ -410,15 +410,15 @@ sound files. Otherwise, you can go to eClass and download the zip file
 <tbody>
 <tr class="odd">
 <td align="center">Lab2_Fr_stop_a.wav</td>
-<td align="center">pʰa, ba, tʰa, da, kʰa, ga</td>
+<td align="center">pa, ba, ta, da, ka, ga</td>
 </tr>
 <tr class="even">
 <td align="center">Lab2_Fr_a_stop_a.wav</td>
-<td align="center">apʰa, aba, atʰa, ada, akʰa, aga</td>
+<td align="center">apa, aba, ata, ada, aka, aga</td>
 </tr>
 <tr class="odd">
-<td align="center">Lab2_Fr_a_stop.wave</td>
-<td align="center">lap, lab, bat, bad, rack, rag</td>
+<td align="center">Lab2_Fr_a_stop.wav</td>
+<td align="center">nappe, nab, latte, lad, sac, vague</td>
 </tr>
 </tbody>
 </table>
