Lab 4 (without Figures)

--- a/New_Labs/Lab3.html
+++ b/New_Labs/Lab3.html
@@ -598,6 +598,11 @@ why?</p>
 </tbody>
 </table>
 <p><br></p>
+<center>
+<h4>
+<strong>SECTION II. SPECTRAL MAKE-UP (FORMANT VALUES)</strong>
+</h4>
+</center>
 <p><strong>Q2:</strong> Is pitch the same across all vowels? Do you
 notice any patterns with it? If so, what do you think the articulatory
 basis of these patterns might be?</p>
