--- a/New_Labs/Lab3.html
+++ b/New_Labs/Lab3.html
@@ -397,7 +397,7 @@ appropriate IPA symbols for each vowel on the top row.<br />
 <ol start="2" style="list-style-type: decimal">
 <li>Measure the pitch (F0) in each of the vowels (see Figure 3.1). Note
 down your measurements in Table 3.1. Note that measurements should be
-rounded to the nearest whole number “unité” – no decimal points!</li>
+rounded to the nearest whole number unit – no decimal points!</li>
 </ol>
 <ul>
 <li>Display the pitch track: <strong>Pitch &gt; Show pitch</strong></li>
@@ -408,12 +408,12 @@ on the right side of the window: note down this value in Table 3.1.</li>
 </ul>
 <p><br></p>
 <blockquote>
-<p><strong>TIP:</strong> The Fundamental frequency value is always
+<p><strong>TIP:</strong> The fundamental frequency value is always
 displayed on the <em>right</em> side of the window in dark red; formant
 frequencies are displayed on the <em>left</em> side in bright red – be
 careful not to get these two confused! If the blue pitch contour (blue
 line) doesn’t appear clearly, it is because Praat’s default pitch range
-is not appropriate for the file you’re listening to:</p>
+is not appropriate for the file you’re listening to.</p>
 </blockquote>
 <p><br></p>
 <ul>
@@ -443,10 +443,9 @@ Praat might be making a measurement error. You can confirm your pitch
 measurement by zooming in to a very small section of the waveform and
 manually measuring the duration of one glottal cycle. See Lab 4 for
 further details.</p>
-<p>Also, if you are using a Windows system, ensure that your ‘analysis
-method’ under Pitch settings is set to <strong>raw
-autocorrelation</strong> to get the correct display for the pitch
-contours.</p>
+<p>Also ensure that your ‘analysis method’ under Pitch settings is set
+to <strong>raw autocorrelation</strong> to get the correct display for
+the pitch contours.</p>
 </blockquote>
 <p><br></p>
 <ol start="3" style="list-style-type: decimal">
