--- a/New_Labs/Lab4.html
+++ b/New_Labs/Lab4.html
@@ -389,17 +389,14 @@ PITCH</strong></h5>
 <li>Measure the fundamental frequency (pitch) in the middle of each [ɛ],
 using the three techniques described below, and fill out Table 4.1.</li>
 </ol>
-<blockquote>
-<p><strong>TIP:</strong> For the purposes of this lab, you will have to
-change the “longest analysis” setting as follows:</p>
-<ul>
-<li>Go to <strong>Analyses &gt; Show analyses…</strong></li>
-<li>Change <u> longest analyses (s) </u> to 12.0s</li>
-</ul>
-<p>Ensure that you change this setting back once the lab is completed!
-This can be done by clicking ‘Standards’ in the same <strong>Show
-analyses</strong> window. <br></p>
-</blockquote>
+<!-- > __TIP:__ -->
+<!-- For the purposes of this lab, you will have to change the "longest analysis" setting as follows: -->
+<!-- > -->
+<!-- > * Go to __Analyses > Show analyses...__ -->
+<!-- * Change <u> longest analyses (s) </u> to 12.0s -->
+<!-- > -->
+<!-- > Ensure that you change this setting back once the lab is completed! This can be done by clicking 'Standards' in the same __Show analyses__ window. -->
+<!-- <br> -->
 <p><u> Three ways to measure fundamental frequency: </u></p>
 <ol style="list-style-type: lower-alpha">
 <li>By displaying the pitch track and having Praat measure the pitch
