--- a/New_Labs/Lab4.html
+++ b/New_Labs/Lab4.html
@@ -519,6 +519,13 @@ measurements.</li>
 <li>A red horizontal bar should appear, with the frequency value on the
 left side of the window, in red.</li>
 </ul>
+<blockquote>
+<p><strong>TIP:</strong> If you’re having trouble seeing the lower
+harmonics, you may want to reduce the spectrogram range that Praat is
+displaying for you: Go to Spectrogram &gt; Spectrogram settings and
+reduce the maximum of the range from the default of 5000 Hz to 3000
+Hz.</p>
+</blockquote>
 <p><br></p>
 </div>
 <div id="section-iii.-formants" class="section level5">
@@ -585,13 +592,22 @@ the vowel</li>
 left side of the window, in red.</li>
 </ul>
 <blockquote>
-<p><strong>TIP:</strong> Praat can sometimes introduce a “ghost” formant
-which can be rectified by raising the LPC setting maximum and/or
-reeducing the number of formants that the software should account for.
-The only way to ensure that there are no “ghost” formants is by taking
-into account the vowel that you’re analysing, determining where the
-different formants are located and seeing whether Praat is matching this
-analysis.</p>
+<p><strong>TIP:</strong> Praat can sometimes track formants incorrectly;
+it may introduce red and white dots where no formant actually exists, or
+may miss a formant and fail to track them with dots. Listen to the vowel
+you’re trying to track, and with your knowledge of approximately what
+that particular vowel’s formants <em>should</em> look like, deduce
+whether or not the tracking you’re seeing needs to be adjusted. For
+instance, if Praat shows your [ɛ] with an F1 and F2 close together, this
+doesn’t make much sense because [ɛ] should have a relatively high F2
+compared to its F1. To remedy a bad tracking situation, go to Formants
+&gt; Formant settings and adjust the formant ceiling. A decent baseline
+for many voices is to look for 5.0 formants with a 5000 Hz to 5500 Hz
+ceiling; for smaller vocal tracts and for fronter/higher vowels, you may
+need to raise the formant ceiling to 6000 Hz or above to get good
+tracking, while for larger vocal tracts and backer/lower vowels you may
+need to lower the ceiling to 4500 Hz or below. This may take some trial
+and error.</p>
 </blockquote>
 <br>
 <center>
