--- a/New_Labs/Lab6.html
+++ b/New_Labs/Lab6.html
@@ -418,10 +418,10 @@ will discuss <strong>VOT</strong> and <strong>spectral pattern</strong>
 in class. Focus on the differences associated with place of articulation
 (i.e. the differences between /p b/, /t d/ and /k g/.</p>
 <ul>
-<li>Open the following sound files in Praat:
+<li><p>Open the following sound files in Praat:
 <strong>Lab6_a_stop_a.wav</strong> and
-<strong>Lab6_i_stop_i.wav</strong></li>
-<li>Focus on the voiced stops for now</li>
+<strong>Lab6_i_stop_i.wav</strong></p></li>
+<li><p>Focus on the voiced stops for now</p></li>
 </ul>
 <p><br></p>
 <ol style="list-style-type: decimal">
@@ -433,6 +433,7 @@ Figure 6.1).</li>
 <li>Zoom in so that you can clearly see the formant transition from the
 stop into the following vowel.</li>
 </ul>
+<p><br></p>
 <ol start="2" style="list-style-type: decimal">
 <li>Note down the movement contour of <strong>F2</strong> (and F1 if you
 can see it) into the following vowel.</li>
@@ -444,8 +445,11 @@ can see it) into the following vowel.</li>
 the following vowel</div>
 </div>
 </center>
-<p><br></p>
 </div>
+</div>
+</div>
+<div id="section" class="section level2">
+<h2><br></h2>
 <div id="section-ii.-fricatives" class="section level5">
 <h5><strong>SECTION II. FRICATIVES</strong></h5>
 <p>Different places of articulation in fricatives are correlated with
@@ -462,14 +466,14 @@ dimensions and compare between fricatives of different POA.</li>
 <p>For this portion of the lab, make sure that the spectrogram is set to
 display frequencies up to <strong>9000 Hz</strong>:</p>
 <ul>
-<li>Spectrum &gt; Spectrogram settings…</li>
-<li>View range: up to 9,000 Hz</li>
-<li>Open the following sound file in Praat:
-<strong>Lab6_a_fricative_a.png</strong></li>
-<li>Select approximately <strong>40ms</strong> in the middle of each
-fricative</li>
-<li><strong>Spectrum &gt; View spectral slice</strong></li>
-<li>For each fricative:
+<li><p>Spectrum &gt; Spectrogram settings…</p></li>
+<li><p>View range: up to 9,000 Hz</p></li>
+<li><p>Open the following sound file in Praat:
+<strong>Lab6_a_fricative_a.png</strong></p></li>
+<li><p>Select approximately <strong>40ms</strong> in the middle of each
+fricative</p></li>
+<li><p><strong>Spectrum &gt; View spectral slice</strong></p></li>
+<li><p>For each fricative:</p>
 <ul>
 <li>Take a screenshot of the spectral slice and paste it into your lab
 Word document. (If you can’t remember how to do this, refer to in in LAB
@@ -619,7 +623,6 @@ creation of derivative works for non-commercial purposes. Thomas Kettig
 needed for the York University LING 4220 Acoustic Phonetics
 course.</font></p>
 <p><br></p>
-</div>
 </div>
 </div>
 
