--- a/New_Labs/Lab6.html
+++ b/New_Labs/Lab6.html
@@ -377,7 +377,7 @@ restrictions on adjacent consonants.
 <p>Go to eClass and download the zip file “Lab6_Soundfiles”, containing
 the following files. Note, you can also generate these sound files or,
 optionally, you can use your “a_stop_a.wav” and “a_stop.wav” files from
-Lab 2 or 5 and generate the other two sound files.</p>
+Lab 2 and generate the other two sound files.</p>
 <table>
 <thead>
 <tr class="header">
