--- a/New_Labs/Lab7.html
+++ b/New_Labs/Lab7.html
@@ -598,8 +598,8 @@ view</div>
 to that of higher frequency harmonics, e.g. the second harmonic, the
 harmonic closest to the first formant, or the harmonic closest to the
 second formant. The easiest way to measure spectral tilt is by
-subtracting the amplitude of F0 (H1) from the amplitude of the second
-harmonic (H2) (see Figure 7.6). Fill in Table 7.1 with the spectral tilt
+subtracting the amplitude of the second harmonic (H2) from the amplitude
+of F0 (H1) (see Figure 7.6). Fill in Table 7.1 with the spectral tilt
 value of the three phonation types.</p>
 <ul>
 <li>Select the first few peaks (around 10 peaks) and <u> zoom in </u> so
@@ -609,14 +609,14 @@ that you can see H1 and H2 clearly.</li>
 amplitude; the number at the top of the screen corresponds to the
 frequency.</li>
 <li>Click on the peak of H2 and get its <u> amplitude </u>.</li>
-<li>Calculate spectral tilt by this formula: <strong>Spectral tilt =
-A(H2)-A(H1)</strong></li>
+<li>Calculate spectral tilt by this formula:
+<strong>A(H1)-A(H2)</strong></li>
 </ul></li>
 </ul>
 <p><br></p>
 <blockquote>
 <p><strong>TIP:</strong><br />
-Measurements for these H2-H1 calculations are much more reliable when
+Measurements for these H1-H2 calculations are much more reliable when
 using a longer section of the sound being analysed. It is recommended
 that you select 50 - 60 ms of the diphthong to get better figures for
 this calculation.</p>
@@ -767,7 +767,7 @@ deviation on waveform</td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
-<td align="left">7. A(H2) - A(H1)</td>
+<td align="left">7. A(H1) - A(H2)</td>
 <td align="center"></td>
 <td align="center"></td>
 <td align="center"></td>
