--- a/New_Labs/Lab1.html
+++ b/New_Labs/Lab1.html
@@ -11,7 +11,6 @@
 
 <meta name="author" content="Thomas Kettig, based on work by Sonya Bird et al." />
 
-<meta name="date" content="2024-07-23" />
 
 <title>Lab 1: Exploring Praat</title>
 
@@ -353,7 +352,6 @@ display: none;
 <h1 class="title toc-ignore">Lab 1: Exploring Praat</h1>
 <h4 class="author">Thomas Kettig, based on work by Sonya Bird et
 al.</h4>
-<h4 class="date">23 July 2024</h4>
 
 </div>
 
@@ -685,8 +683,12 @@ segmented and labeled spectrogram and waveform of your name.</p>
 <center>
 <font size="4.5"> <strong>LAB 1 REPORT</strong> </font>
 </center>
-<p><font size="4.5"> <br> <strong>Q1:</strong> How can you tell where
-one word ends and another word begins?<br />
+<p><font size="4.5"> <br> <strong>Upload to eClass</strong> a .doc or
+.pdf with your answers to the following questions as well as the .wav
+and .TextGrid that you created for this lab. Each student must complete
+and submit this lab on their own.</p>
+<p><strong>Q1:</strong> How can you tell where one word ends and another
+word begins?<br />
 <br> <strong>Q2:</strong> Do you notice any patterns in terms of how
 different sounds look visually, on either the waveform or the
 spectrogram?</p>
